Correct page overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,27 @@ $red: #ff8f7c;
 $yellow: #ffcb75;
 $green: #75ddc6;
 
+body,
+ul,
+li,
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+ul {
+  list-style: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 %stylish_heading {
   color: $green;
   text-shadow: 2px 1px 0 $cream, 4px 3px 0 $red;
